--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.1",
     "@studio-freight/lenis": "^1.0.42",
+    "@tanstack/react-table": "^8.19.2",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.2",
@@ -38,10 +39,12 @@
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "next-intl": "^3.15.3",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-intersection-observer": "^9.10.3",
+    "react-quill": "^2.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.77.6",
     "simplex-noise": "^4.0.1",
