--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "next-intl": "^3.15.3",
+    "prop-types": "^15.8.1",
     "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
