--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@clerk/elements": "^0.12.1",
     "@clerk/localizations": "^2.4.5",
     "@clerk/nextjs": "^5.2.12",
-    "@edgestore/react": "^0.1.6",
-    "@edgestore/server": "^0.1.6",
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.0",
@@ -27,12 +25,20 @@
     "@radix-ui/react-tooltip": "^1.1.1",
     "@studio-freight/lenis": "^1.0.42",
     "@tanstack/react-table": "^8.19.2",
+    "@tiptap/extension-heading": "^2.5.8",
+    "@tiptap/extension-image": "^2.5.8",
+    "@tiptap/extension-table": "^2.5.8",
+    "@tiptap/pm": "^2.5.8",
+    "@tiptap/react": "^2.5.8",
+    "@tiptap/starter-kit": "^2.5.8",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "compressorjs": "^1.2.1",
     "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.6",
     "firebase": "^10.12.5",
     "framer-motion": "^11.2.12",
@@ -56,6 +62,7 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
