building: exams pages

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/elements": "^0.12.1",
     "@clerk/localizations": "^2.4.5",
     "@clerk/nextjs": "^5.2.12",
+    "@gsap/react": "^2.1.1",
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.0",
@@ -42,6 +43,7 @@
     "embla-carousel-react": "^8.1.6",
     "firebase": "^10.12.5",
     "framer-motion": "^11.2.12",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.395.0",
     "mini-svg-data-uri": "^1.4.4",
     "mongodb": "^6.7.0",
