--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.6",
     "firebase": "^10.12.5",
+    "firebase-admin": "^12.3.1",
+    "firebase-functions": "^5.0.1",
     "framer-motion": "^11.2.12",
     "gsap": "^3.12.5",
     "lucide-react": "^0.395.0",
