--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.1",
     "@studio-freight/lenis": "^1.0.42",
     "@tanstack/react-table": "^8.19.2",
@@ -37,6 +40,7 @@
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "compressorjs": "^1.2.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
@@ -58,6 +62,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-intersection-observer": "^9.10.3",
+    "react-phone-number-input": "^3.4.5",
     "react-quill": "^2.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.77.6",
