--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "prop-types": "^15.8.1",
     "quill": "^2.0.2",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-intersection-observer": "^9.10.3",
