--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@gsap/react": "^2.1.1",
     "@hello-pangea/dnd": "^16.6.0",
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
