--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.1",
+    "@react-email/components": "^0.0.23",
+    "@react-email/render": "^1.0.0",
     "@studio-freight/lenis": "^1.0.42",
     "@tanstack/react-table": "^8.19.2",
     "@tiptap/extension-heading": "^2.5.8",
@@ -45,6 +47,7 @@
     "cmdk": "^1.0.0",
     "compressorjs": "^1.2.1",
     "crypto": "^1.0.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.6",
     "firebase": "^10.12.5",
@@ -58,15 +61,23 @@
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "next-intl": "^3.15.3",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.14",
     "prop-types": "^15.8.1",
     "quill": "^2.0.2",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^7.3.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-email": "^3.0.1",
+    "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.10.3",
     "react-phone-number-input": "^3.4.5",
     "react-quill": "^2.0.0",
+    "react-time-picker": "^7.0.0",
+    "resend": "^4.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.77.6",
     "simplex-noise": "^4.0.1",
@@ -78,6 +89,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
